# stock-trend-prediction

./: .gitignore  Makefile  README.md  full_project.ipynb  pyproject.toml  requirements.txt
notebooks/: 01_data_overview.ipynb  01_data_overview_only.ipynb  02- finding_global_gaps.ipynb  02-temporal-coverage-analysis.ipynb  02-temporal-coverage-analysis_cleaned.ipynb  02-temporal-coverage-analysis_cleaned_2010.ipynb  03-price-volume-distributions.ipynb  05-trend-seasonality-decomposition.ipynb  06_correlation_analysis.ipynb  06_sequenece_analysis.ipynb  06_sequenece_analysis_new.ipynb  07-target-variable-creation.ipynb  export_data_with_new_features.py  full_project.ipynb  gaps_restored.ipynb  price-returns-volatility.ipynb  train.ipynb
src/configs/: training_config.py
src/data/: make_dataset.py  make_torch_datasets.py  outliers.py  stock_dataset.py
src/features/: build_features.py
src/models/: gru_attention_model.py  gru_model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
temp/: fix_lab.py  make_dataset_modified.py  submit.py  training_work_flow.ipynb  training_work_flow.py
